Fix bad dialog height on Safari

--- a/Sparc.Blossom/SparcEngine/Aura/SparcAura.razor.scss
+++ b/Sparc.Blossom/SparcEngine/Aura/SparcAura.razor.scss
@@ -19,6 +19,7 @@
     border: none;
     z-index: 10000;
     max-height: 100%;
+    height: auto;
     font-family: 'elza-text';
 
     header {
